@@ -5,6 +5,7 @@
  * Restore cursor position better after deleteTrailingSpacesB (#666)
  * Fix eolPoint' when on last, empty line (#667, #662)
  * More intuitive justOneSep (emacs M-SPC) (#665)
+ * Closer behaviour to emacs C-x 0 (#642)
 
 0.10.0
 ------
